--- a/src/scss/components/pages/a-propos.scss
+++ b/src/scss/components/pages/a-propos.scss
@@ -49,7 +49,8 @@
         }
 
         a {
-          color: $secondary-color;
+          color: $light;
+          background-color: $secondary-color;
           font-weight: 600;
         }
 
@@ -255,7 +256,7 @@
   }
 
   #citation {
-    padding: 150px 0 50px;
+    padding: 150px 0 0px;
   }
 
   #assurance {
@@ -264,7 +265,7 @@
 
   #contact {
     background-color: $light !important;
-    padding-top: 200px;
+    padding-top: 150px;
 
     .cta {
       background-color: $secondary-color;
