correction listing + taille image

--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -50,6 +50,7 @@
         flex-direction: column;
         width: 30%;
         gap: 30px;
+        justify-content: space-between;
       }
     }
   }
