--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -441,6 +441,14 @@
         box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.2);
         transition: transform ease-in-out 200ms;
 
+        .container-image {
+          img {
+            max-height: 220px;
+            object-fit: cover;
+            width: 100%;
+          }
+        }
+
         .available {
           background: $primary-color;
           color: #fff;
