listing css + ajout message no estate

--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -282,6 +282,8 @@
 
           .container-image {
             img {
+              min-height: 220px;
+              height: 220px;
               max-height: 220px;
               object-fit: cover;
               width: 100%;
