--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -281,10 +281,11 @@
           transition: transform ease-in-out 200ms;
 
           .container-image {
+            min-height: 220px;
+            height: 220px;
+            max-height: 220px;
             img {
-              min-height: 220px;
-              height: 220px;
-              max-height: 220px;
+              height: 100%;
               object-fit: cover;
               width: 100%;
             }
