--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -61,6 +61,10 @@
     .descr_bien {
       border-bottom: 1px solid $dark-gray;
       margin-bottom: 100px;
+
+      p {
+        margin: 50px 0;
+      }
     }
 
     .container {
