--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -369,3 +369,20 @@ form {
   background-size: cover !important;
   background-repeat: no-repeat !important;
 }
+
+// Select2
+
+.select2-container--default{
+  .select2-selection--multiple{
+    max-height: auto;
+    line-height:0;
+    
+    .select2-selection__choice {
+      background-color: $primary-color;
+      border: none;
+      color: $light;
+      margin-bottom: 0px;
+      text-transform: capitalize;
+    }
+  }
+}
