--- a/src/scss/components/responsive.scss
+++ b/src/scss/components/responsive.scss
@@ -142,6 +142,24 @@
     max-height: 300px;
   }
 
+  #contact{
+    form{
+      .columns{
+        flex-direction: column;
+        gap: 0 !important;
+
+        .cold,
+        .colg{
+          width: 100% !important;
+        }
+
+        input{
+          width: 100%;
+        }
+      }
+    }
+  }
+
   footer {
     .container {
       .footer-top {
@@ -504,6 +522,25 @@
         z-index: 3;
         padding: 20px;
         width: 90%;
+
+        .textContent{
+          margin: 20px auto 50px;
+          display:block;
+
+          h3{
+            margin-bottom: 30px;
+          }
+
+          p{
+            margin: 5px auto;
+          }
+        }
+
+        .cta{
+          display: block;
+          width: 140px;
+          margin-bottom: 10px;
+        }
       }
     }
   }
