--- a/src/scss/components/responsive.scss
+++ b/src/scss/components/responsive.scss
@@ -262,6 +262,29 @@
     }
   }
 
+  #newsletter{
+    .container{
+      .colg{
+        h3{
+          font-size:.9rem;
+          line-height: 7px;
+        }
+      }
+
+      .cold{
+        form{
+          p{
+            flex-direction: column;
+
+            input[type="email"]{
+              border: 1px solid $light-gray;
+            }
+          }
+        }
+      }
+    }
+  }
+
   #simple-page .container .cold,
   #section_bleue .container .cold,
   #outro .container .cold {
