--- a/src/scss/components/responsive.scss
+++ b/src/scss/components/responsive.scss
@@ -536,7 +536,9 @@
 
       .bloc_img {
         margin-top: 0;
-        width: 85%;
+        width: 95%!important;
+        height: 350px;
+        top:0;
       }
 
       .content_section-cta {
