--- a/src/scss/components/responsive.scss
+++ b/src/scss/components/responsive.scss
@@ -537,8 +537,8 @@
       .bloc_img {
         margin-top: 0;
         width: 95%!important;
-        height: 350px;
-        top:0;
+        height: 350px !important;
+        top:0 !important;
       }
 
       .content_section-cta {
@@ -833,7 +833,7 @@
     #header {
       .container {
         h1 {
-          font-size: 2.5rem;
+          font-size: 2rem;
           line-height: 2.5rem;
           top: 200px;
           bottom: auto;
@@ -848,10 +848,15 @@
         display: flex;
         gap: 10px;
         justify-content: space-between;
+        flex-direction: column;
+
+        .col-g{
+          width: 100%;
+        }
 
         .col-d {
-          flex-direction: column;
-          width: 32.5%;
+          flex-direction: row;
+          width: 100%;
           gap: 10px;
         }
       }
