--- a/src/scss/components/responsive.scss
+++ b/src/scss/components/responsive.scss
@@ -308,7 +308,7 @@
           .content {
             position: absolute;
             left: 10vw;
-            top: 25vh;
+            top: 25vh !important;
             right: auto;
             margin-top: 200px;
           }
