--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -168,7 +168,7 @@
       display: flex;
       -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-      gap: 1rem;
+      gap: .5rem;
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center;
