--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -196,6 +196,11 @@
           width: 100%;
           height: 100%;
 
+          .select2,
+          .select2-container{
+           width: 100% !important;
+          }
+
           .select2-selection--multiple {
             background-color: white;
             border: 1px solid #eeeef0 !important;
