--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -198,7 +198,8 @@
 
           .select2,
           .select2-container{
-           width: 100% !important;
+            width: 100% !important;
+            text-transform: uppercase !important;
           }
 
           .select2-selection--multiple {
