--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -172,16 +172,15 @@
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
+      -webkit-box-align: flex-start;
+      -ms-flex-align: flex-start;
+      align-items: flex-start;
       margin-bottom: 100px;
       padding-top: 0 !important;
 
       .input-text,
       .input-select {
         width: 15%;
-        height: 40px;
         margin: 0.5rem auto;
         display: -webkit-box;
         display: -ms-flexbox;
