--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -418,7 +418,7 @@
 
         .result {
           display: flex;
-          align-items: flex-start;
+          align-items: center;
 
           h2 {
             text-transform: uppercase;
