--- a/src/scss/components/responsive.scss
+++ b/src/scss/components/responsive.scss
@@ -142,18 +142,18 @@
     max-height: 300px;
   }
 
-  #contact{
-    form{
-      .columns{
+  #contact {
+    form {
+      .columns {
         flex-direction: column;
         gap: 0 !important;
 
         .cold,
-        .colg{
+        .colg {
           width: 100% !important;
         }
 
-        input{
+        input {
           width: 100%;
         }
       }
@@ -262,21 +262,21 @@
     }
   }
 
-  #newsletter{
-    .container{
-      .colg{
-        h3{
-          font-size:.9rem;
+  #newsletter {
+    .container {
+      .colg {
+        h3 {
+          font-size: 0.9rem;
           line-height: 7px;
         }
       }
 
-      .cold{
-        form{
-          p{
+      .cold {
+        form {
+          p {
             flex-direction: column;
 
-            input[type="email"]{
+            input[type="email"] {
               border: 1px solid $light-gray;
             }
           }
@@ -536,9 +536,9 @@
 
       .bloc_img {
         margin-top: 0;
-        width: 95%!important;
+        width: 95% !important;
         height: 350px !important;
-        top:0 !important;
+        top: 0 !important;
       }
 
       .content_section-cta {
@@ -548,20 +548,20 @@
         padding: 20px;
         width: 90%;
 
-        .textContent{
+        .textContent {
           margin: 20px auto 50px;
-          display:block;
+          display: block;
 
-          h3{
+          h3 {
             margin-bottom: 30px;
           }
 
-          p{
+          p {
             margin: 5px auto;
           }
         }
 
-        .cta{
+        .cta {
           display: block;
           width: 140px;
           margin-bottom: 10px;
@@ -850,13 +850,15 @@
         justify-content: space-between;
         flex-direction: column;
 
-        .col-g{
+        .col-g {
           width: 100%;
+          max-height: 250px;
         }
 
         .col-d {
           flex-direction: row;
           width: 100%;
+          max-height: 120px;
           gap: 10px;
         }
       }
