Corrrection cta + multipage biens

--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -540,6 +540,13 @@
         }
       }
     }
+
+    .seeMore{
+      width: 100%;
+      margin: auto;
+      text-align: center;
+      padding-top: 150px;
+    }
   }
 
   #mot_president {
