couleur btn option

--- a/src/scss/components/colors.scss
+++ b/src/scss/components/colors.scss
@@ -1,5 +1,6 @@
 $primary-color: #bce036;
 $hover: #809826;
+$richBlack: #00272B;
 $secondary-color: #818274;
 $hover-secondary : #5f6057;
 $light: #fff;
