--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -332,6 +332,10 @@
             padding: 5px 20px;
           }
 
+          .option{
+            background: $richBlack;
+          }
+
           &.-center {
             position: relative;
             top: 50px;
