--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -333,7 +333,7 @@
           }
 
           .option{
-            background: $richBlack;
+            background: $hover;
           }
 
           &.-center {
