--- a/src/scss/components/colors.scss
+++ b/src/scss/components/colors.scss
@@ -1,6 +1,6 @@
 $primary-color: #bce036;
 $hover: #809826;
-$richBlack: #00272B;
+$richBlack: #495a0d;
 $secondary-color: #818274;
 $hover-secondary : #5f6057;
 $light: #fff;
