--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -115,37 +115,16 @@ a {
 .cta-border {
   background-color: none;
   border: 1px solid $primary-color;
-  border-radius: 30px;
   color: $dark-gray;
   font-size: 1rem;
-  padding: 12px 40px;
-  text-decoration: none;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  font-weight: 300;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
 
   .cta-border + .cta-border {
     margin-left: 30px;
   }
 
   &::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    background-color: #7f1f2f;
-    transform: scaleX(0);
-    transform-origin: right;
-    display: block;
-    transition: transform ease-in 300ms;
+    background-color: $secondary-color;
     color: #fff;
-    left: 0;
-    border-radius: 30px;
   }
 
   &::after {
@@ -164,38 +143,10 @@ a {
 
 .cta-blue {
   background-color: $secondary-color;
-  border-radius: 30px;
-  padding: 10px 30px;
   color: $light;
-  text-decoration: none;
-  position: relative;
-  z-index: 0;
-  text-transform: uppercase;
-  font-weight: 300;
-  letter-spacing: 5px;
 
   &::before {
     background-color: $hover;
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform ease-in-out 300ms;
-    z-index: -1;
-    border-radius: 30px;
-  }
-
-  &::after {
-    content: "";
-  }
-
-  &:hover {
-    &::before {
-      transform: scaleX(1);
-      transform-origin: right;
-    }
   }
 }
 
