--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -69,35 +69,37 @@ a {
   }
 }
 
-.cta {
+.cta,
+.cta-home,
+.cta-border,
+.cta-blue {
   background-color: $primary-color;
-  border-radius: 30px;
   padding: 10px 30px;
   color: $light;
   text-decoration: none;
   position: relative;
   z-index: 0;
+  text-align: center;
   text-transform: uppercase;
   font-weight: 300;
   letter-spacing: 5px;
+  display: block;
+  width: fit-content;
+  border-radius: 30px;
+  overflow:hidden;
 
   &::before {
     background-color: $hover;
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     transform: scaleX(0);
     transform-origin: left;
     transition: transform ease-in-out 300ms;
     z-index: -1;
-    border-radius: 30px;
-  }
-
-  &::after {
-    content: "";
+    top: 0;
+    left: 0;
   }
 
   &:hover {
@@ -108,46 +110,66 @@ a {
   }
 }
 
-.grecaptcha-badge {
-  visibility: hidden;
+.cta-home {
+  padding: 10px 0px;
+  color: #fff;
+  text-decoration: none;
+  z-index: 0;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-wrap: nowrap;
+  letter-spacing: 3px;
+  font-size: 0.8rem;
+  border-bottom: 1px solid;
 }
 
 .cta-border {
-  background-color: none;
+  background: none;
   border: 1px solid $primary-color;
   color: $dark-gray;
-  font-size: 1rem;
-
-  .cta-border + .cta-border {
-    margin-left: 30px;
-  }
+  overflow: hidden;
 
   &::before {
-    background-color: $secondary-color;
-    color: #fff;
-  }
-
-  &::after {
     content: "";
+    top: 0;
+    background-color: $secondary-color;
+    transform-origin: right;
+    display: block;
+    color: #fff;
+    left: 0;
   }
 
   &:hover {
     color: #fff;
 
     &::before {
-      transform: scaleX(1);
       transform-origin: left;
     }
   }
 }
 
+.cta-border + .cta-border {
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
 .cta-blue {
   background-color: $secondary-color;
-  color: $light;
 
   &::before {
     background-color: $hover;
+    content: "";
   }
+
+  &:hover {
+    &::before {
+      transform-origin: right;
+    }
+  }
+}
+
+.grecaptcha-badge {
+  visibility: hidden;
 }
 
 .nav {
