--- a/src/scss/components/pages/front-page.scss
+++ b/src/scss/components/pages/front-page.scss
@@ -48,7 +48,7 @@
             }
 
             .cta {
-              line-height: 10rem;
+              margin-top: 30px;
               letter-spacing: 3px;
               font-size: 0.9rem;
             }
