--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -411,6 +411,9 @@
       .btn-container{
         text-align: center;
         padding: 70px 0;
+        display: flex;
+        justify-content: center;
+        gap: 20px;
       }
 
       .container-result {
