--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -141,6 +141,28 @@
 
       .swiper-wrapper {
         .swiper-slide {
+          position: relative;
+
+          &::before{
+            text-align: center;
+            content: "+";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: #414141;
+            opacity: 0;
+            color: #fff;
+            font-size: 3rem;
+            padding-top: calc((100% / 2) - 3.5rem);
+          }
+
+          &:hover{
+            &::before{
+            opacity: .8;
+          }}
+
           a {
             max-height: 300px;
             height: 250px;
