--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -43,6 +43,14 @@
         img {
           object-fit: cover;
           height: 100%;
+          width: 100%;
+        }
+      }
+
+      .col-g{
+        a{
+          height: 450px;
+          width: 100%;
         }
       }
 
@@ -51,6 +59,10 @@
         width: 30%;
         gap: 30px;
         justify-content: space-between;
+
+        a{
+          height: 210px;
+        }
       }
     }
   }
