min heeight header

--- a/src/scss/components/pages/model-estimations.scss
+++ b/src/scss/components/pages/model-estimations.scss
@@ -1,4 +1,5 @@
-.header-estimation{
+.header-estimation,
+.page-template-model-estimation .header{
     min-height: 150px;
 }
 
@@ -20,7 +21,7 @@
             font-weight: 800;
         }
     }
-    
+
     .wrapper{
         width: 70vw;
         margin: auto;
