--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -106,6 +106,10 @@
             align-items: center;
             text-wrap: nowrap;
             overflow: hidden;
+
+            span{
+              text-transform: capitalize;
+            }
           }
 
           .select-custom-container {
