min-height header single estate

--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -5,6 +5,7 @@
     .container {
       position: relative;
       height: 80vh;
+      min-height: 700px;
 
       h1 {
         text-align: center;
