alignement text + scrript

--- a/src/scss/components/pages/model-estimations.scss
+++ b/src/scss/components/pages/model-estimations.scss
@@ -58,6 +58,8 @@
             p{
                 margin-bottom: 5px;
                 transition: color 0.3s ease-in-out;
+                text-align: left;
+                
                 i{
                     transition: color 0.3s ease-in-out;
                     display: inline-block;
