Création page projet + listing projet

--- a/src/scss/components/colors.scss
+++ b/src/scss/components/colors.scss
@@ -1,6 +1,9 @@
 $primary-color: #bce036;
 $hover: #809826;
 $richBlack: #495a0d;
+
+$darkGreen: #3E453C;
+
 $secondary-color: #818274;
 $hover-secondary : #5f6057;
 $light: #fff;
