--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -1,4 +1,5 @@
-.page-template-single-estate {
+.page-template-single-estate,
+.page-template-single-projet {
   header {
     background-repeat: no-repeat !important;
     background-size: cover !important;
