--- a/src/scss/components/sections/section-suiveznous.scss
+++ b/src/scss/components/sections/section-suiveznous.scss
@@ -1,5 +1,7 @@
 #suiveznous {
     overflow-x: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
   .container {
     text-align: center;
     backdrop-filter: brightness(0.5);
