--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,4 +3,4 @@
   "components/sections/section-contact.scss", "components/sections/section-cta-contact.scss", "components/sections/section-pointsforts.scss",
   "components/pages/front-page.scss", "components/pages/waiting.scss", "components/pages/contact.scss", "components/pages/simple-page.scss", "components/pages/actualites.scss",
   "components/pages/a-propos.scss", "components/pages/informations.scss", "components/pages/listing-estates.scss", "components/pages/single-estate.scss" ,"components/pages/documentation.scss", "components/pages/single.scss", "components/pages/model-estimations.scss",
-  "components/responsive.scss";
+  "components/responsive.scss","components/pages/listing-projet.scss";
