--- a/src/scss/components/pages/listing-estates.scss
+++ b/src/scss/components/pages/listing-estates.scss
@@ -47,9 +47,8 @@
       .whise-filter-container {
         display: -webkit-box;
         display: -ms-flexbox;
-        display: flex;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
         gap: 1rem;
         -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -62,9 +61,8 @@
 
         .input-text,
         .input-select {
-          width: 15%;
+          width: 100%;
           height: 40px;
-          margin: 0.5rem auto;
           display: -webkit-box;
           display: -ms-flexbox;
           display: flex;
@@ -81,7 +79,9 @@
             .select2-selection--multiple {
               background-color: white;
               border: 1px solid #eeeef0 !important;
-              border-radius: 5px !important;
+              border-radius: 25px !important;
+              padding-left: 10px;
+              text-transform: uppercase !important;
               min-height: 40px !important;
               line-height: 25px;
               width: 100%;
@@ -282,6 +282,7 @@
         }
 
         .cta {
+          width: 100%;
           border: none;
           background-color: $secondary-color;
           font-family: "Sofia-pro", sans-serif;
@@ -289,8 +290,6 @@
           letter-spacing: 3px;
           font-size: 0.8rem;
         }
-
-        
 
         #sortBy {
           border: 1px solid $middle-gray;
@@ -448,11 +447,14 @@
 
         .result-display {
           max-width: 70vw;
+          display: flex;
+          gap: 10px;
 
           a {
             padding: 5px;
             background: $primary-color;
             text-decoration: none;
+            text-transform: capitalize;
             color: #fff;
             display: inline-block;
             transition: background-color ease-in-out 300ms;
